--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
   </head>
   <body>
     <h1>Welcome</h1>
+
+    <footer>
+      Coded by
+      <a href="https://github.com/03Grace" target="_blank">Grace Alilu</a>, code
+      hosted on
+      <a href="https://github.com/03Grace/Gracious-Weather-App" target="_blank"
+        >GitHub</a
+      >
+      and website hosted
+      <a href="https://gracious-weather-app.netlify.app/" target="_blank"
+        >on Netlify</a
+      >
+    </footer>
   </body>
 </html>
