--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <a href="https://github.com/03Grace/Gracious-Weather-App" target="_blank"
         >GitHub</a
       >
-      and website hosted
+      and website hosted on
       <a href="https://gracious-weather-app.netlify.app/" target="_blank"
-        >on Netlify</a
+        >Netlify</a
       >
     </footer>
   </body>
