--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Welcome</h1>
+    <header>
+      <h1>Welcome to Gracious Weather App</h1>
+
+      <form>
+        <input type="search" placeholder="Enter a city" required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
 
     <footer>
       Coded by
