--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
         <input type="submit" value="Search" />
       </form>
     </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Wednesday 16:29, Scattered Clouds
+          <br />
+          Humidity: 66%, Wind: 3.13 Km/Hr
+        </p>
+      </div>
+      <div>⛅18C</div>
+    </main>
 
     <footer>
       Coded by
