--- a/index.html
+++ b/index.html
@@ -7,37 +7,41 @@
     <title>Weather App</title>
   </head>
   <body>
-    <header>
-      <h1>Welcome to Gracious Weather App</h1>
+    <div class="main-body">
+      <header>
+        <h1>Welcome to Gracious Weather App</h1>
 
-      <form>
-        <input type="search" placeholder="Enter a city" required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Wednesday 16:29, Scattered Clouds
-          <br />
-          Humidity: 66%, Wind: 3.13 Km/Hr
-        </p>
-      </div>
-      <div>⛅18C</div>
-    </main>
+        <form>
+          <input type="search" placeholder="Enter a city" required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Wednesday 16:29, Scattered Clouds
+            <br />
+            Humidity: 66%, Wind: 3.13 Km/Hr
+          </p>
+        </div>
+        <div>⛅18C</div>
+      </main>
 
-    <footer>
-      Coded by
-      <a href="https://github.com/03Grace" target="_blank">Grace Alilu</a>, code
-      hosted on
-      <a href="https://github.com/03Grace/Gracious-Weather-App" target="_blank"
-        >GitHub</a
-      >
-      and website hosted on
-      <a href="https://gracious-weather-app.netlify.app/" target="_blank"
-        >Netlify</a
-      >
-    </footer>
+      <footer>
+        Coded by
+        <a href="https://github.com/03Grace" target="_blank">Grace Alilu</a>,
+        code hosted on
+        <a
+          href="https://github.com/03Grace/Gracious-Weather-App"
+          target="_blank"
+          >GitHub</a
+        >
+        and website hosted on
+        <a href="https://gracious-weather-app.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
