--- a/index.html
+++ b/index.html
@@ -18,21 +18,28 @@
       <header>
         <h1>Welcome to Gracious Weather App</h1>
 
-        <form>
-          <input type="search" placeholder="Enter a city" required />
-          <input type="submit" value="Search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city"
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Wednesday 16:29, Scattered Clouds
-            <br />
-            Humidity: 66%, Wind: 3.13 Km/Hr
-          </p>
+        <div class="weather-data">
+          <div>
+            <h1 class="weather-city">Paris</h1>
+            <p class="weather-details">
+              Wednesday 16:29, Scattered Clouds
+              <br />
+              Humidity: <strong>66%</strong>, Wind: <strong>3.13 Km/h</strong>
+            </p>
+          </div>
+          <div class="temp"> <div class = "temp-icon">⛅</div><div class="temp-value">18</div> <div class="temp-unit">C</div>
         </div>
-        <div>⛅18C</div>
       </main>
 
       <footer>
