Added basic Javascript element

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       <header>
         <h1>Welcome to Gracious Weather App</h1>
 
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city"
             required
             class="search-form-input"
+            id="searched-city"
           />
           <input type="submit" value="Search" class="search-form-button" />
         </form>
@@ -31,7 +32,7 @@
       <main>
         <div class="weather-data">
           <div>
-            <h1 class="weather-city">Paris</h1>
+            <h1 class="weather-city" id="city">Paris</h1>
             <p class="weather-details">
               Wednesday 16:29, Scattered Clouds
               <br />
@@ -57,5 +58,6 @@
         >
       </footer>
     </div>
+    <script src="src\app.js"></script>
   </body>
 </html>
