Added API integration

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&family=Kumar+One&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src\index.css" />
     <title>Weather App</title>
   </head>
@@ -40,7 +41,7 @@
               Humidity: <strong>66%</strong>, Wind: <strong>3.13 Km/h</strong>
             </p>
           </div>
-          <div class="temp"> <div class = "temp-icon">⛅</div><div class="temp-value">18</div> <div class="temp-unit">C</div>
+          <div class="temp"> <div class = "temp-icon">⛅</div><div class="temp-value" id="temperature">18</div> <div class="temp-unit">C</div>
         </div>
       </main>
 
