Added Java script forecast element.
A bit advanced

--- a/index.html
+++ b/index.html
@@ -50,43 +50,7 @@
           </div>
         </div>
 
-        <div class="weather-forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp"><strong>15°</strong></div>
-              <div class="weather-forecast-temp">9°</div>
-            </div>
-          </div>
-
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Wed</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp"><strong>9°</strong></div>
-              <div class="weather-forecast-temp">19°</div>
-            </div>
-          </div>
-
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Thur</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp"><strong>19°</strong></div>
-              <div class="weather-forecast-temp">23°</div>
-            </div>
-          </div>
-
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Fri</div>
-            <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp"><strong>23°</strong></div>
-              <div class="weather-forecast-temp">9°</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
 
       <footer>
